fix<reviews> content box items gap

--- a/styles/reviews.css
+++ b/styles/reviews.css
@@ -5,7 +5,9 @@
 .reviews__content-box {
   margin-top: 80px;
   display: flex;
-  gap: 30px;
+  width: 100%;
+  justify-content: space-between;
+  gap: 1.2rem;
 }
 
 .reviews__customer-review {
